Fix white space in mobile screen

--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ body{
 }
 
 form{
-    width: 370px;
+    width: 350px;
     height: 300px;
     position: absolute;
     right: 5%;
@@ -117,33 +117,31 @@ form{
 }
 
 input{
-    height: 30px;
+    height: 40px;
     border: 1px solid hsl(278, 68%, 11%);
     border-radius: 5px;
-    margin: 3px 3px -10px 5px;
-    padding: 5px 0 5px 15px;
+    margin: 5px 5px -15px 5px;
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 input:active{
     border: hsl(249, 99%, 64%);
 }
 
-.cardDiv{
-    border: 1px solid red;
-    padding: 0;
-}
-
 #cardHolder{
-    width: 80%;
+    width: calc(100% - 10px);
 }
 
 #cardNumber{
-    width: 80%;
+    width: calc(100% - 10px);
 }
 
 .date-cvc-Div{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    height: 120px;
 }
 
 .date-input-div{
@@ -172,7 +170,7 @@ input:active{
 }
 
 button{
-    width: 85%;
+    width: 100%;
     height: 45px;
     margin: 10px 0 10px 0;
     background: hsl(278, 68%, 11%);
@@ -272,9 +270,9 @@ button:hover{
 
     form{
         top: 50%;
-        left: 18%;
+        left: 50%;
         right: 0;
-        transform: translate(0,0);
+        transform: translate(-50%,0);
     }
 
     .circl{
